# red-moon

./: .gitignore  README.md  file_version_info.txt  pyproject.toml  version_info.yml
src/: gui.py  main.py  redis_logic.py
src/gui/: __init__.py  highlighting.py  main_window.py  output_manager.py  output_window.py  utils.py
