[tool.poetry]
name = "red-moon"
version = "0.1.0"
description = "Redis Monitoring Tools"
authors = ["Sadegh Yazdani <silverstar10@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "red-moon"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.8"
PyQt5 = "5.15.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
black = "^23.1.0"
flake8-pyproject = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.11"
# warn_return_any = true
ignore_missing_imports = true
ignore_missing_imports_per_module = true
warn_unused_configs = true
exclude = [
    "venv/*",  # TOML literal string (single-quotes, no escaping necessary)
    "winenv/*",  # TOML literal string (single-quotes, no escaping necessary)
    "venv/bin/*.py",  # TOML basic string (double-quotes, backslash and other characters need escaping)
    "migrations/*",
    "minivib/*",
    "build/*",
    "init/*",
    "dist/*",
    # ".py",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]


[tool.isort]
profile = "black"
skip_glob = ["**/.git*", "**/.env*", "**/venv*", "**/venvwsl*","**/docs*","**/migrations*"]
force_single_line = false
line_length = 99
# verbose = true
skip_gitignore = true
color_output = true

[tool.pylint.messages_control]
max-line-length = 99
disable = [
  "import-outside-toplevel",
  "broad-except",
  "bare-except",
  "unused-import",
  "unused-variable",
  "missing-docstring",
  "unused-argument",
  "invalid-name",
  "no-value-for-parameter",
  "no-member",
  "no-self-use",
  "import-error",
  "line-too-long",
  "protected-access",
  "too-few-public-methods",
]

[tool.pylint.design]
# limiting the number of returns might discourage
# the use of guard clauses. So we increase the
# allowed number of returns from 6 to 8
max-returns = 8
# Maximum number of arguments for function / method.
max-args=15

max-parents=15

# Maximum number of attributes for a class (see R0902).
max-attributes=15

# Maximum number of boolean expressions in an if statement.
max-bool-expr=5

# Maximum number of locals for function / method body.
max-locals=25

# Maximum number of statements in function / method body.
max-statements=50

# Minimum number of public methods for a class (see R0903).
min-public-methods=1


[tool.black]
line-length = 99


[tool.flake8]
ignore = ['E231', 'E241']
max-line-length = 99
per-file-ignores = [
  # '__init__.py:F401',
]
# count = true
